# intech-discord-bot

./: .dockerignore  .env.dev.sample  .env.sample  .gitignore  CLAUDE.md  Dockerfile  README.md  bot.py  fly.toml  keep_alive.py  main.py  pyproject.toml  ruff.toml
.github/workflows/: lint.yml
docs/: ADD_COMMAND.md  APPROVAL.md  ARCHITECTURE.md  CHANNEL_RESTRICTION.md  CLUB_CHANNEL.md  DEVELOPMENT.md  DEV_SETUP.md  INDEX.md  SETUP.md  UTILITIES.md
src/: __init__.py
src/commands/: __init__.py  _sample.py  channel.py  club_channel.py  event_channel.py  help.py  project_channel.py  role_info.py
src/utils/: approval_config.py  approval_decorator.py  approval_utils.py  channel_config.py  channel_decorator.py  channel_utils.py  command_metadata.py  env_utils.py  event_config.py  message_utils.py  validation_utils.py
src/views/: __init__.py  approval_view.py
